# pylintqmd

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
pylintqmd/: __init__.py  converter.py  pylintqmd.sh  qmd_to_py_converter.py
