[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"

[project]
name = "pylintqmd"
authors = [{name = "Amy Heather"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.flit.metadata.requires-extra]
test = ["pytest"]